--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 name: nextools
 version: '1.0'
-main: de.hiorcraft.nex.nextools.Nextools
+main: de.hiorcraft.nex.nextools.BukkitMain
 api-version: '1.21'
